# pack-monitor

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  platformio.ini
hardware/: fp-lib-table  pack-monitor.kicad_pcb  pack-monitor.kicad_prl  pack-monitor.kicad_pro  pack-monitor.kicad_sch  sym-lib-table
hardware/libraries/: 1985302.kicad_sym  1985302.stp  4628.kicad_sym  pack-monitor.kicad_sym
hardware/libraries/pack-monitor.pretty/: FUSE_4628.kicad_mod  PHOENIX_1985302.kicad_mod  RaspberryPi_Pico_Common_THT.kicad_mod
scripts/: calibrate.py  client.py  test.py
src/: adc.cpp  adc.h  capacity.cpp  capacity.h  cell_monitors.c  cell_monitors.cpp  cell_monitors.h  config.h  ds18b20.c  ds18b20.h  events.c  events.h  led.c  led.h  main.c  main.cpp  measurements.cpp  measurements.h  modbus.c  modbus.h  onewire.c  onewire.h  protection.c  protection.cpp  protection.h  registers.h  relay.cpp  relay.h  ringbuf.c  ringbuf.h  serial.cpp  serial.h  temp.c  temp.h
